   * New translations: Serbian Ijekavian, Serbian Ijekavian Latin
   * Updated translations: Czech, Finnish, French, German, Hungarian, Japanese,
     Latvian, Lithuanian, Serbian, Spanish, Slovak
 * User interface:
   * Work around a lobby resize issue, which made game list contents too small
     (bug #15561)
 * Miscellaneous and bug fixes:
   * Defaulted log level to error again
   * Fix bug #14114: checksum operations fail against certain scenario events
   * Fix bug #15545: recall list gone after loading savegame created in linger
     mode
   * Fix bug #15656: OOS errors in LoW from differing starting gold
   * Fix bug #15598: can't move units after reloading game
   * Fix bug #15601: replay crashes when replay log messages are enabled
   * Fix segfault due to missing seed-attribute of an attack in a replay
   * Added the first draft of the gui2 design documentation
   * Limit the maximum length of the mp command dialog as workaround for bug
     #13333 (This workaround is only implemented for Windows and Mac)
   * The lobby will play a random music playlist, configured by [lobby_music],
     instead of looping the main menu song (bug #15668).
   * The titlescreen will play a random music playlist, configured by
     [titlescreen_music], instead of looping the main menu song (bug #15669).

Version 1.7.15-1.8rc1:
 * AI:
   * Set RCA AI to be the default AI for single-player campaigns.
   * Fix bug #15390: add a try_delete action to modify_ai which has
     'delete if exists, don't complain if not exists' semantics
   * Fix bug #15013: make AI gotos persist between turns when set by
     WML, make the AI don't use gotos for normal moves.
 * Engine:
   * Fix bug #15542: if game encounters a base_unit that refers to a
     unit that the game cannot find, throw exception instead of
     failing assertion.
   * Add a list of team units and a dedicated unit mode to gamestate
     inspector (launched by :inspect command and [inspect] tag).
 * Language and i18n: