@@ -14,6 +14,7 @@ Version 1.7.15+svn:
      (bug #15561)
  * Miscellaneous and bug fixes:
    * Defaulted log level to error again
+   * Fix bug #13882: Map which is invalid aborts map selection
    * Fix bug #14114: checksum operations fail against certain scenario events
    * Fix bug #15545: recall list gone after loading savegame created in linger
      mode
